--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alura flix</title>
+    <link rel="styleheet"="style.css">
 </head>
 
 <body>
@@ -16,5 +17,17 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
+<h2>outros filmes boms</h2>
+
+
+<div class="categoria-video">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1P2a0zMEiJs?si=tYbLS3JMRJTP1aaq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+
+
 
 </html>
